Relink languages to .com vs .cz

--- a/tt/translations.tt
+++ b/tt/translations.tt
@@ -1,7 +1,9 @@
-<a href="[% rel_static %]de_DE/[% section %]" xml:lang="de-DE" lang="de-DE" hreflang="de-DE">Deutsch</a>
+<a href="http://bobby-tables.cz/[% section %]" xml:lang="cs-CZ" lang="cs-CZ" hreflang="cs-CZ">Čeština</a>
 /
-<a href="[% rel_static %]ru_RU/[% section %]" xml:lang="ru-RU" lang="ru-RU" hreflang="ru-RU">Русский язык</a>
+<a href="http://bobby-tables.com/de_DE/[% section %]" xml:lang="de-DE" lang="de-DE" hreflang="de-DE">Deutsch</a>
 /
-<a href="[% rel_static %]es_AR/[% section %]" xml:lang="es-AR" lang="es-AR" hreflang="es-AR">Español</a>
+<a href="http://bobby-tables.com/ru_RU/[% section %]" xml:lang="ru-RU" lang="ru-RU" hreflang="ru-RU">Русский язык</a>
 /
-<a href="[% rel_static %][% section %]" xml:lang="en" lang="en" hreflang="en">English</a>
+<a href="http://bobby-tables.com/es_AR/[% section %]" xml:lang="es-AR" lang="es-AR" hreflang="es-AR">Español</a>
+/
+<a href="http://bobby-tables.com/[% section %]" xml:lang="en" lang="en" hreflang="en">English</a>
