--- a/tt/page.tt
+++ b/tt/page.tt
@@ -1,14 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="[% rfc_1766_lang %]" lang="[% rfc_1766_lang %]">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="cs-CZ" lang="cs-CZ">
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <title>
-            [% IF currlang %]
-                [% |loc(currlang) %]bobby-tables.com: A guide to preventing SQL injection in {currlang}[% END %]
-            [% ELSE %]
-                [% |loc %]bobby-tables.com: A guide to preventing SQL injection[% END %]
-            [% END %]
-        </title>
+        <title>bobby-tables.cz: Příručka k předcházení SQL injection v češtině</title>
         <link rel="stylesheet" type="text/css" href="[% rel_static %]css/bobby.css" />
         [% IF git %]<link rel="via" href="[% git %]" />[% END %]
         <meta name="msvalidate.01" content="4EF6B7CF4E86418C29626DA5E8B28AF5" /><!-- Bing ownership -->
